# hrewrite

./: CMakeLists.txt  README.md  build.sh
hrewrite/: context_constructor.hpp  context_rw.hpp  context_sort.hpp  context_term.hpp  context_theory.hpp  hrewrite.hpp  hterm.hpp  hterm_instantiate.hpp  hterm_match.hpp  hterm_print.hpp  parsing.hpp  utils.hpp
hrewrite/exceptions/: common.hpp  natset.hpp  parsing.hpp  rewrite.hpp  theory_free.hpp  undeclared.hpp  utils_core.hpp
hrewrite/parsing/: automata.hpp  combine.hpp  core.hpp  element.hpp  inclusion.hpp  match.hpp  sequence.hpp
hrewrite/theory/: core.hpp  theory_free.hpp  theory_leaf.hpp  theory_literal.hpp  theory_variable.hpp
hrewrite/utils/: container.hpp  graph.hpp  hash.hpp  iterator.hpp  natset.hpp  print.hpp  type_traits.hpp  variant.hpp
python/: __init__.py  hrewrite.pybind.cpp  hrewrite.pybind.hpp
tests/: hrewrite.test.cpp  hrewrite.test.hpp  hterm.test.cpp  hterm.test.hpp  main.test.cpp
tests/common/: activation.hpp  debug.hpp
tests/parsing/: inclusion.test.cpp  match.test.cpp  trigger.test.cpp
tests/theory/: common.hpp  common.test.cpp  theory_free.test.cpp  theory_leaf.test.cpp  theory_literal.test.cpp  theory_variable.test.cpp
tests/utils/: container.test.cpp  graph.test.cpp  hash.test.cpp  iterator.test.cpp  natset.test.cpp  type_traits.test.cpp
tests_python/: test_hrewrite.py
